css fixes (should look better on mobile)

--- a/index.css
+++ b/index.css
@@ -1,9 +1,4 @@
-html {
-  height: 100%;
-}
-
 body {
-  height: 100%;
   font-family: "Ubuntu";
   background-color: black;
 }
@@ -12,8 +7,6 @@ video {
   position: fixed;
   top: 50%;
   left: 50%;
-  min-width: 100%;
-  min-height: 100%;
-  transform: translateX(-50%) translateY(-50%);
-  z-index: 0;
+  height: 100%;
+  transform: translate(-50%, -50%);
 }
